Update scripts and likely locales info to UCD 12.0.0 and CLDR 35.1

--- a/js/data/locale/rangeToScript.json
+++ b/js/data/locale/rangeToScript.json
@@ -190,12 +190,7 @@
     [
         "Armn",
         1369,
-        1375
-    ],
-    [
-        "Armn",
-        1377,
-        1415
+        1416
     ],
     [
         "Zyyy",
@@ -222,7 +217,7 @@
     ],
     [
         "Hebr",
-        1520,
+        1519,
         1524
     ],
     [
@@ -250,7 +245,10 @@
     ],
     [
         "Zyyy",
-        1563,
+        1563
+    ],
+    [
+        "Arab",
         1564
     ],
     [
@@ -334,6 +332,11 @@
         2042
     ],
     [
+        "Nkoo",
+        2045,
+        2047
+    ],
+    [
         "Samr",
         2048,
         2093
@@ -353,6 +356,11 @@
         2142
     ],
     [
+        "Syrc",
+        2144,
+        2154
+    ],
+    [
         "Arab",
         2208,
         2228
@@ -364,7 +372,7 @@
     ],
     [
         "Arab",
-        2260,
+        2259,
         2273
     ],
     [
@@ -384,11 +392,11 @@
     [
         "Zinh",
         2385,
-        2386
+        2388
     ],
     [
         "Deva",
-        2387,
+        2389,
         2403
     ],
     [
@@ -467,7 +475,7 @@
     [
         "Beng",
         2534,
-        2555
+        2558
     ],
     [
         "Guru",
@@ -544,7 +552,7 @@
     [
         "Guru",
         2662,
-        2677
+        2678
     ],
     [
         "Gujr",
@@ -612,7 +620,8 @@
     ],
     [
         "Gujr",
-        2809
+        2809,
+        2815
     ],
     [
         "Orya",
@@ -764,11 +773,6 @@
     [
         "Telu",
         3072,
-        3075
-    ],
-    [
-        "Telu",
-        3077,
         3084
     ],
     [
@@ -823,17 +827,12 @@
     ],
     [
         "Telu",
-        3192,
+        3191,
         3199
     ],
     [
         "Knda",
         3200,
-        3203
-    ],
-    [
-        "Knda",
-        3205,
         3212
     ],
     [
@@ -897,7 +896,7 @@
     ],
     [
         "Mlym",
-        3329,
+        3328,
         3331
     ],
     [
@@ -913,11 +912,6 @@
     [
         "Mlym",
         3346,
-        3386
-    ],
-    [
-        "Mlym",
-        3389,
         3396
     ],
     [
@@ -1022,30 +1016,12 @@
     ],
     [
         "Laoo",
-        3719,
-        3720
-    ],
-    [
-        "Laoo",
+        3718,
         3722
     ],
     [
         "Laoo",
-        3725
-    ],
-    [
-        "Laoo",
-        3732,
-        3735
-    ],
-    [
-        "Laoo",
-        3737,
-        3743
-    ],
-    [
-        "Laoo",
-        3745,
+        3724,
         3747
     ],
     [
@@ -1054,21 +1030,7 @@
     ],
     [
         "Laoo",
-        3751
-    ],
-    [
-        "Laoo",
-        3754,
-        3755
-    ],
-    [
-        "Laoo",
-        3757,
-        3769
-    ],
-    [
-        "Laoo",
-        3771,
+        3751,
         3773
     ],
     [
@@ -1381,7 +1343,7 @@
     [
         "Mong",
         6176,
-        6263
+        6264
     ],
     [
         "Mong",
@@ -1543,6 +1505,16 @@
         7304
     ],
     [
+        "Geor",
+        7312,
+        7354
+    ],
+    [
+        "Geor",
+        7357,
+        7359
+    ],
+    [
         "Sund",
         7360,
         7367
@@ -1591,12 +1563,16 @@
     [
         "Zyyy",
         7413,
-        7414
+        7415
     ],
     [
         "Zinh",
         7416,
         7417
+    ],
+    [
+        "Zyyy",
+        7418
     ],
     [
         "Latn",
@@ -1653,7 +1629,7 @@
     [
         "Zinh",
         7616,
-        7669
+        7673
     ],
     [
         "Zinh",
@@ -1788,7 +1764,7 @@
     [
         "Zyyy",
         8352,
-        8382
+        8383
     ],
     [
         "Zinh",
@@ -1850,11 +1826,6 @@
     [
         "Zyyy",
         8592,
-        9214
-    ],
-    [
-        "Zyyy",
-        9216,
         9254
     ],
     [
@@ -1885,22 +1856,7 @@
     [
         "Zyyy",
         11160,
-        11193
-    ],
-    [
-        "Zyyy",
-        11197,
-        11208
-    ],
-    [
-        "Zyyy",
-        11210,
-        11217
-    ],
-    [
-        "Zyyy",
-        11244,
-        11247
+        11263
     ],
     [
         "Glag",
@@ -2007,7 +1963,7 @@
     [
         "Zyyy",
         11776,
-        11844
+        11855
     ],
     [
         "Hani",
@@ -2123,7 +2079,7 @@
     [
         "Bopo",
         12549,
-        12589
+        12591
     ],
     [
         "Hang",
@@ -2176,6 +2132,10 @@
         13054
     ],
     [
+        "Zyyy",
+        13055
+    ],
+    [
         "Kana",
         13056,
         13143
@@ -2198,7 +2158,7 @@
     [
         "Hani",
         19968,
-        40917
+        40943
     ],
     [
         "Yiii",
@@ -2248,12 +2208,12 @@
     [
         "Latn",
         42891,
-        42926
+        42943
     ],
     [
         "Latn",
-        42928,
-        42935
+        42946,
+        42950
     ],
     [
         "Latn",
@@ -2288,7 +2248,7 @@
     [
         "Deva",
         43232,
-        43261
+        43263
     ],
     [
         "Kali",
@@ -2423,6 +2383,11 @@
     [
         "Grek",
         43877
+    ],
+    [
+        "Latn",
+        43878,
+        43879
     ],
     [
         "Cher",
@@ -2764,6 +2729,11 @@
         66339
     ],
     [
+        "Ital",
+        66349,
+        66351
+    ],
+    [
         "Goth",
         66352,
         66378
@@ -2979,7 +2949,7 @@
     [
         "Khar",
         68121,
-        68147
+        68149
     ],
     [
         "Khar",
@@ -2989,7 +2959,7 @@
     [
         "Khar",
         68159,
-        68167
+        68168
     ],
     [
         "Khar",
@@ -3082,9 +3052,34 @@
         68863
     ],
     [
+        "Rohg",
+        68864,
+        68903
+    ],
+    [
+        "Rohg",
+        68912,
+        68921
+    ],
+    [
         "Arab",
         69216,
         69246
+    ],
+    [
+        "Sogo",
+        69376,
+        69415
+    ],
+    [
+        "Sogd",
+        69424,
+        69465
+    ],
+    [
+        "Elym",
+        69600,
+        69622
     ],
     [
         "Brah",
@@ -3106,6 +3101,10 @@
         69825
     ],
     [
+        "Kthi",
+        69837
+    ],
+    [
         "Sora",
         69840,
         69864
@@ -3123,7 +3122,7 @@
     [
         "Cakm",
         69942,
-        69955
+        69958
     ],
     [
         "Mahj",
@@ -3225,6 +3224,10 @@
         70457
     ],
     [
+        "Zinh",
+        70459
+    ],
+    [
         "Gran",
         70460,
         70468
@@ -3273,7 +3276,8 @@
     ],
     [
         "Newa",
-        70749
+        70749,
+        70751
     ],
     [
         "Tirh",
@@ -3313,7 +3317,7 @@
     [
         "Takr",
         71296,
-        71351
+        71352
     ],
     [
         "Takr",
@@ -3323,7 +3327,7 @@
     [
         "Ahom",
         71424,
-        71449
+        71450
     ],
     [
         "Ahom",
@@ -3336,6 +3340,11 @@
         71487
     ],
     [
+        "Dogr",
+        71680,
+        71739
+    ],
+    [
         "Wara",
         71840,
         71922
@@ -3343,6 +3352,31 @@
     [
         "Wara",
         71935
+    ],
+    [
+        "Nand",
+        72096,
+        72103
+    ],
+    [
+        "Nand",
+        72106,
+        72151
+    ],
+    [
+        "Nand",
+        72154,
+        72164
+    ],
+    [
+        "Zanb",
+        72192,
+        72263
+    ],
+    [
+        "Soyo",
+        72272,
+        72354
     ],
     [
         "Pauc",
@@ -3385,6 +3419,84 @@
         72886
     ],
     [
+        "Gonm",
+        72960,
+        72966
+    ],
+    [
+        "Gonm",
+        72968,
+        72969
+    ],
+    [
+        "Gonm",
+        72971,
+        73014
+    ],
+    [
+        "Gonm",
+        73018
+    ],
+    [
+        "Gonm",
+        73020,
+        73021
+    ],
+    [
+        "Gonm",
+        73023,
+        73031
+    ],
+    [
+        "Gonm",
+        73040,
+        73049
+    ],
+    [
+        "Gong",
+        73056,
+        73061
+    ],
+    [
+        "Gong",
+        73063,
+        73064
+    ],
+    [
+        "Gong",
+        73066,
+        73102
+    ],
+    [
+        "Gong",
+        73104,
+        73105
+    ],
+    [
+        "Gong",
+        73107,
+        73112
+    ],
+    [
+        "Gong",
+        73120,
+        73129
+    ],
+    [
+        "Maka",
+        73440,
+        73464
+    ],
+    [
+        "Taml",
+        73664,
+        73713
+    ],
+    [
+        "Taml",
+        73727
+    ],
+    [
         "Xsux",
         73728,
         74649
@@ -3408,6 +3520,11 @@
         "Egyp",
         77824,
         78894
+    ],
+    [
+        "Egyp",
+        78896,
+        78904
     ],
     [
         "Hluw",
@@ -3470,14 +3587,19 @@
         93071
     ],
     [
-        "Plrd",
-        93952,
-        94020
+        "Medf",
+        93760,
+        93850
     ],
     [
         "Plrd",
-        94032,
-        94078
+        93952,
+        94026
+    ],
+    [
+        "Plrd",
+        94031,
+        94087
     ],
     [
         "Plrd",
@@ -3489,9 +3611,18 @@
         94176
     ],
     [
+        "Nshu",
+        94177
+    ],
+    [
+        "Zyyy",
+        94178,
+        94179
+    ],
+    [
         "Tang",
         94208,
-        100332
+        100343
     ],
     [
         "Tang",
@@ -3504,7 +3635,23 @@
     ],
     [
         "Hira",
-        110593
+        110593,
+        110878
+    ],
+    [
+        "Hira",
+        110928,
+        110930
+    ],
+    [
+        "Kana",
+        110948,
+        110951
+    ],
+    [
+        "Nshu",
+        110960,
+        111355
     ],
     [
         "Dupl",
@@ -3598,13 +3745,18 @@
     ],
     [
         "Zyyy",
+        119520,
+        119539
+    ],
+    [
+        "Zyyy",
         119552,
         119638
     ],
     [
         "Zyyy",
         119648,
-        119665
+        119672
     ],
     [
         "Zyyy",
@@ -3749,6 +3901,35 @@
         122922
     ],
     [
+        "Hmnp",
+        123136,
+        123180
+    ],
+    [
+        "Hmnp",
+        123184,
+        123197
+    ],
+    [
+        "Hmnp",
+        123200,
+        123209
+    ],
+    [
+        "Hmnp",
+        123214,
+        123215
+    ],
+    [
+        "Wcho",
+        123584,
+        123641
+    ],
+    [
+        "Wcho",
+        123647
+    ],
+    [
         "Mend",
         124928,
         125124
@@ -3761,7 +3942,7 @@
     [
         "Adlm",
         125184,
-        125258
+        125259
     ],
     [
         "Adlm",
@@ -3772,6 +3953,16 @@
         "Adlm",
         125278,
         125279
+    ],
+    [
+        "Zyyy",
+        126065,
+        126132
+    ],
+    [
+        "Zyyy",
+        126209,
+        126269
     ],
     [
         "Arab",
@@ -3965,12 +4156,7 @@
     [
         "Zyyy",
         127248,
-        127278
-    ],
-    [
-        "Zyyy",
-        127280,
-        127339
+        127340
     ],
     [
         "Zyyy",
@@ -4008,8 +4194,13 @@
     ],
     [
         "Zyyy",
+        127584,
+        127589
+    ],
+    [
+        "Zyyy",
         127744,
-        128722
+        128725
     ],
     [
         "Zyyy",
@@ -4019,7 +4210,7 @@
     [
         "Zyyy",
         128752,
-        128758
+        128762
     ],
     [
         "Zyyy",
@@ -4029,7 +4220,12 @@
     [
         "Zyyy",
         128896,
-        128980
+        128984
+    ],
+    [
+        "Zyyy",
+        128992,
+        129003
     ],
     [
         "Zyyy",
@@ -4058,41 +4254,63 @@
     ],
     [
         "Zyyy",
-        129296,
-        129310
+        129280,
+        129291
     ],
     [
         "Zyyy",
-        129312,
-        129319
+        129293,
+        129393
     ],
     [
         "Zyyy",
-        129328
+        129395,
+        129398
     ],
     [
         "Zyyy",
-        129331,
-        129342
+        129402,
+        129442
     ],
     [
         "Zyyy",
-        129344,
-        129355
+        129445,
+        129450
     ],
     [
         "Zyyy",
-        129360,
-        129374
+        129454,
+        129482
     ],
     [
         "Zyyy",
-        129408,
-        129425
+        129485,
+        129619
     ],
     [
         "Zyyy",
-        129472
+        129632,
+        129645
+    ],
+    [
+        "Zyyy",
+        129648,
+        129651
+    ],
+    [
+        "Zyyy",
+        129656,
+        129658
+    ],
+    [
+        "Zyyy",
+        129664,
+        129666
+    ],
+    [
+        "Zyyy",
+        129680,
+        129685
     ],
     [
         "Hani",
@@ -4113,6 +4331,11 @@
         "Hani",
         178208,
         183969
+    ],
+    [
+        "Hani",
+        183984,
+        191456
     ],
     [
         "Hani",
