--- a/js/data/locale/scriptToRange.json
+++ b/js/data/locale/scriptToRange.json
@@ -60,8 +60,7 @@
             1548
         ],
         [
-            1563,
-            1564
+            1563
         ],
         [
             1567
@@ -120,7 +119,10 @@
         ],
         [
             7413,
-            7414
+            7415
+        ],
+        [
+            7418
         ],
         [
             8192,
@@ -144,7 +146,7 @@
         ],
         [
             8352,
-            8382
+            8383
         ],
         [
             8448,
@@ -172,10 +174,6 @@
         ],
         [
             8592,
-            9214
-        ],
-        [
-            9216,
             9254
         ],
         [
@@ -196,23 +194,11 @@
         ],
         [
             11160,
-            11193
-        ],
-        [
-            11197,
-            11208
-        ],
-        [
-            11210,
-            11217
-        ],
-        [
-            11244,
-            11247
+            11263
         ],
         [
             11776,
-            11844
+            11855
         ],
         [
             12272,
@@ -263,6 +249,9 @@
         [
             12927,
             13007
+        ],
+        [
+            13055
         ],
         [
             13144,
@@ -372,6 +361,10 @@
             66299
         ],
         [
+            94178,
+            94179
+        ],
+        [
             113824,
             113827
         ],
@@ -404,12 +397,16 @@
             119272
         ],
         [
+            119520,
+            119539
+        ],
+        [
             119552,
             119638
         ],
         [
             119648,
-            119665
+            119672
         ],
         [
             119808,
@@ -493,6 +490,14 @@
             120831
         ],
         [
+            126065,
+            126132
+        ],
+        [
+            126209,
+            126269
+        ],
+        [
             126976,
             127019
         ],
@@ -522,11 +527,7 @@
         ],
         [
             127248,
-            127278
-        ],
-        [
-            127280,
-            127339
+            127340
         ],
         [
             127344,
@@ -553,8 +554,12 @@
             127569
         ],
         [
+            127584,
+            127589
+        ],
+        [
             127744,
-            128722
+            128725
         ],
         [
             128736,
@@ -562,7 +567,7 @@
         ],
         [
             128752,
-            128758
+            128762
         ],
         [
             128768,
@@ -570,7 +575,11 @@
         ],
         [
             128896,
-            128980
+            128984
+        ],
+        [
+            128992,
+            129003
         ],
         [
             129024,
@@ -593,34 +602,52 @@
             129197
         ],
         [
-            129296,
-            129310
+            129280,
+            129291
         ],
         [
-            129312,
-            129319
+            129293,
+            129393
         ],
         [
-            129328
+            129395,
+            129398
         ],
         [
-            129331,
-            129342
+            129402,
+            129442
         ],
         [
-            129344,
-            129355
+            129445,
+            129450
         ],
         [
-            129360,
-            129374
+            129454,
+            129482
         ],
         [
-            129408,
-            129425
+            129485,
+            129619
         ],
         [
-            129472
+            129632,
+            129645
+        ],
+        [
+            129648,
+            129651
+        ],
+        [
+            129656,
+            129658
+        ],
+        [
+            129664,
+            129666
+        ],
+        [
+            129680,
+            129685
         ],
         [
             917505
@@ -719,11 +746,11 @@
         ],
         [
             42891,
-            42926
+            42943
         ],
         [
-            42928,
-            42935
+            42946,
+            42950
         ],
         [
             42999,
@@ -736,6 +763,10 @@
         [
             43868,
             43876
+        ],
+        [
+            43878,
+            43879
         ],
         [
             64256,
@@ -924,11 +955,7 @@
         ],
         [
             1369,
-            1375
-        ],
-        [
-            1377,
-            1415
+            1416
         ],
         [
             1418
@@ -952,7 +979,7 @@
             1514
         ],
         [
-            1520,
+            1519,
             1524
         ],
         [
@@ -993,6 +1020,9 @@
             1562
         ],
         [
+            1564
+        ],
+        [
             1566
         ],
         [
@@ -1028,7 +1058,7 @@
             2237
         ],
         [
-            2260,
+            2259,
             2273
         ],
         [
@@ -1200,6 +1230,10 @@
         [
             1869,
             1871
+        ],
+        [
+            2144,
+            2154
         ]
     ],
     "Thaa": [
@@ -1214,7 +1248,7 @@
             2384
         ],
         [
-            2387,
+            2389,
             2403
         ],
         [
@@ -1223,7 +1257,7 @@
         ],
         [
             43232,
-            43261
+            43263
         ]
     ],
     "Beng": [
@@ -1279,7 +1313,7 @@
         ],
         [
             2534,
-            2555
+            2558
         ]
     ],
     "Guru": [
@@ -1342,7 +1376,7 @@
         ],
         [
             2662,
-            2677
+            2678
         ]
     ],
     "Gujr": [
@@ -1398,7 +1432,8 @@
             2801
         ],
         [
-            2809
+            2809,
+            2815
         ]
     ],
     "Orya": [
@@ -1520,15 +1555,18 @@
         [
             3046,
             3066
+        ],
+        [
+            73664,
+            73713
+        ],
+        [
+            73727
         ]
     ],
     "Telu": [
         [
             3072,
-            3075
-        ],
-        [
-            3077,
             3084
         ],
         [
@@ -1572,17 +1610,13 @@
             3183
         ],
         [
-            3192,
+            3191,
             3199
         ]
     ],
     "Knda": [
         [
             3200,
-            3203
-        ],
-        [
-            3205,
             3212
         ],
         [
@@ -1635,7 +1669,7 @@
     ],
     "Mlym": [
         [
-            3329,
+            3328,
             3331
         ],
         [
@@ -1648,10 +1682,6 @@
         ],
         [
             3346,
-            3386
-        ],
-        [
-            3389,
             3396
         ],
         [
@@ -1741,43 +1771,18 @@
             3716
         ],
         [
-            3719,
-            3720
-        ],
-        [
+            3718,
             3722
         ],
         [
-            3725
-        ],
-        [
-            3732,
-            3735
-        ],
-        [
-            3737,
-            3743
-        ],
-        [
-            3745,
+            3724,
             3747
         ],
         [
             3749
         ],
         [
-            3751
-        ],
-        [
-            3754,
-            3755
-        ],
-        [
-            3757,
-            3769
-        ],
-        [
-            3771,
+            3751,
             3773
         ],
         [
@@ -1862,6 +1867,14 @@
         [
             4348,
             4351
+        ],
+        [
+            7312,
+            7354
+        ],
+        [
+            7357,
+            7359
         ],
         [
             11520,
@@ -2136,7 +2149,7 @@
         ],
         [
             6176,
-            6263
+            6264
         ],
         [
             6272,
@@ -2157,7 +2170,12 @@
             12447
         ],
         [
-            110593
+            110593,
+            110878
+        ],
+        [
+            110928,
+            110930
         ],
         [
             127488
@@ -2194,6 +2212,10 @@
         ],
         [
             110592
+        ],
+        [
+            110948,
+            110951
         ]
     ],
     "Bopo": [
@@ -2203,7 +2225,7 @@
         ],
         [
             12549,
-            12589
+            12591
         ],
         [
             12704,
@@ -2243,7 +2265,7 @@
         ],
         [
             19968,
-            40917
+            40943
         ],
         [
             63744,
@@ -2270,6 +2292,10 @@
             183969
         ],
         [
+            183984,
+            191456
+        ],
+        [
             194560,
             195101
         ]
@@ -2288,6 +2314,10 @@
         [
             66304,
             66339
+        ],
+        [
+            66349,
+            66351
         ]
     ],
     "Goth": [
@@ -2320,7 +2350,7 @@
         ],
         [
             2385,
-            2386
+            2388
         ],
         [
             6832,
@@ -2350,7 +2380,7 @@
         ],
         [
             7616,
-            7669
+            7673
         ],
         [
             7675,
@@ -2385,6 +2415,9 @@
         ],
         [
             66272
+        ],
+        [
+            70459
         ],
         [
             119143,
@@ -2678,7 +2711,7 @@
         ],
         [
             68121,
-            68147
+            68149
         ],
         [
             68152,
@@ -2686,7 +2719,7 @@
         ],
         [
             68159,
-            68167
+            68168
         ],
         [
             68176,
@@ -2740,6 +2773,10 @@
         [
             1984,
             2042
+        ],
+        [
+            2045,
+            2047
         ]
     ],
     "Sund": [
@@ -2891,6 +2928,10 @@
         [
             77824,
             78894
+        ],
+        [
+            78896,
+            78904
         ]
     ],
     "Samr": [
@@ -2993,6 +3034,9 @@
         [
             69760,
             69825
+        ],
+        [
+            69837
         ]
     ],
     "Batk": [
@@ -3034,7 +3078,7 @@
         ],
         [
             69942,
-            69955
+            69958
         ]
     ],
     "Merc": [
@@ -3060,11 +3104,11 @@
     "Plrd": [
         [
             93952,
-            94020
+            94026
         ],
         [
-            94032,
-            94078
+            94031,
+            94087
         ],
         [
             94095,
@@ -3094,7 +3138,7 @@
     "Takr": [
         [
             71296,
-            71351
+            71352
         ],
         [
             71360,
@@ -3394,7 +3438,7 @@
     "Ahom": [
         [
             71424,
-            71449
+            71450
         ],
         [
             71453,
@@ -3477,7 +3521,7 @@
     "Adlm": [
         [
             125184,
-            125258
+            125259
         ],
         [
             125264,
@@ -3529,7 +3573,8 @@
             70747
         ],
         [
-            70749
+            70749,
+            70751
         ]
     ],
     "Osge": [
@@ -3548,11 +3593,174 @@
         ],
         [
             94208,
-            100332
+            100343
         ],
         [
             100352,
             101106
+        ]
+    ],
+    "Gonm": [
+        [
+            72960,
+            72966
+        ],
+        [
+            72968,
+            72969
+        ],
+        [
+            72971,
+            73014
+        ],
+        [
+            73018
+        ],
+        [
+            73020,
+            73021
+        ],
+        [
+            73023,
+            73031
+        ],
+        [
+            73040,
+            73049
+        ]
+    ],
+    "Nshu": [
+        [
+            94177
+        ],
+        [
+            110960,
+            111355
+        ]
+    ],
+    "Soyo": [
+        [
+            72272,
+            72354
+        ]
+    ],
+    "Zanb": [
+        [
+            72192,
+            72263
+        ]
+    ],
+    "Dogr": [
+        [
+            71680,
+            71739
+        ]
+    ],
+    "Gong": [
+        [
+            73056,
+            73061
+        ],
+        [
+            73063,
+            73064
+        ],
+        [
+            73066,
+            73102
+        ],
+        [
+            73104,
+            73105
+        ],
+        [
+            73107,
+            73112
+        ],
+        [
+            73120,
+            73129
+        ]
+    ],
+    "Maka": [
+        [
+            73440,
+            73464
+        ]
+    ],
+    "Medf": [
+        [
+            93760,
+            93850
+        ]
+    ],
+    "Rohg": [
+        [
+            68864,
+            68903
+        ],
+        [
+            68912,
+            68921
+        ]
+    ],
+    "Sogd": [
+        [
+            69424,
+            69465
+        ]
+    ],
+    "Sogo": [
+        [
+            69376,
+            69415
+        ]
+    ],
+    "Elym": [
+        [
+            69600,
+            69622
+        ]
+    ],
+    "Nand": [
+        [
+            72096,
+            72103
+        ],
+        [
+            72106,
+            72151
+        ],
+        [
+            72154,
+            72164
+        ]
+    ],
+    "Hmnp": [
+        [
+            123136,
+            123180
+        ],
+        [
+            123184,
+            123197
+        ],
+        [
+            123200,
+            123209
+        ],
+        [
+            123214,
+            123215
+        ]
+    ],
+    "Wcho": [
+        [
+            123584,
+            123641
+        ],
+        [
+            123647
         ]
     ]
 }
